tests/core/error/fts-snippet-1.rq
SELECT fts:snippet(?u) { ?u a rdfs:Resource }
